# gexconf

./: CMakeLists.txt  ConfHelper.sln  README
ConfHelper/: Conf.cpp  Conf.h  ConfHelper.cpp  ConfHelper.vcxproj  ConfHelper.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h  test.conf
examples/: example.c
include/: gexconf.h
src/: conf.c  config.in.h  internalConf.h  string_convert.c  string_convert.h
